--- a/gradio-chatbox-english-teacher-bogdan.ipynb
+++ b/gradio-chatbox-english-teacher-bogdan.ipynb
@@ -1,40 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c3547e7661f6ac",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-08T17:24:11.796865900Z",
      "start_time": "2026-01-08T17:24:11.768329800Z"
     }
    },
-   "cell_type": "code",
-   "source": "#ollama run hf.co/legraphista/RoMistral-7b-Instruct-GGUF:Q4_K_M",
-   "id": "59c3547e7661f6ac",
    "outputs": [],
-   "execution_count": 1
+   "source": [
+    "#ollama pull jobautomation/OpenEuroLLM-Romanian\n",
+    "#ollama serve"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2026-01-13T08:06:46.990781200Z",
      "start_time": "2026-01-13T08:06:40.350416700Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import gradio as gr\n",
-    "import os\n",
     "\n",
-    "from week8.hello import hello\n",
     "\n",
-    "load_dotenv(override=True)\n",
-    "\n",
-    "api_key = os.getenv(\"OLLAMA_API_KEY\")\n",
-    "ollama_base_url = os.getenv(\"OLLAMA_BASE_URL\")\n",
+    "api_key = \"ollama\"\n",
+    "ollama_base_url = \"http://localhost:11434/v1\"\n",
     "\n",
     "openai = OpenAI(api_key=api_key, base_url=ollama_base_url)\n",
     "\n",
@@ -65,49 +94,15 @@
     "        yield response\n",
     "\n",
     "gr.ChatInterface(fn=chat).launch()"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7860\n",
-      "* To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data",
-     "jetTransient": {
-      "display_id": null
-     }
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "f142f6652a9ecac1"
+   "id": "f142f6652a9ecac1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
